# switchbot-dashboard

./: .gitignore  Dockerfile  README.md  architecture.drawio  compose.yml  device_list.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: .env.example  Switchbot.py  device_list.json  get_device_data.py  get_device_list.py  main.py  switchbot.py
docker/: compose.yml
pyproject_template/: __main__.py
src/: get_device_data.py  save_device_data.py
tests/: test_main.py
